src/sass/catalog.scss
/* *************************************************************** */
/*        Catalog                                                              */
/* *************************************************************** */

.catalog section.page, .catalog aside {
	background: #fff;
}

.catalog .container {
	margin:0 auto;
	margin-top: 25px;
	width: 970px;
	position:relative;
}


.catalog section.page, .catalog aside{
	border:rgba(0,0,0,0.11) 1px solid;
	-moz-box-shadow: 1px 3px 10px #888;
	-webkit-box-shadow: 1px 3px 10px #888;
	box-shadow: 1px 3px 10px #888;
}

.catalog section.page {
	width:720px;
	margin:0 0 100px 0;
	padding:0 0 10px 0;
	position: relative;
	top:0;
	left: 230px;
	z-index:100;
	min-height:650px;
}

.catalog aside {
	width:230px;
	margin:37px 0 0 0;
	padding:5px 20px 12px 12px;
	position:absolute;
	top:0;
	left:5px;
	z-index:80;
}

	.catalog aside .features dt {
		font-family: 'Lato', arial, serif;
		font-weight:bold;
		font-size: 13px;
		-ms-user-select: none;
		-webkit-user-select: none;
		-khtml-user-select: none;
		-moz-user-select: none;
		-o-user-select: none;
		user-select: none;
	}
		.catalog aside .features dt input[type="checkbox"] {
			width:20px;
			margin:0 0 0 0;
		}

	.catalog aside p, .catalog aside .features dd {
		font-size: 9px;
		color: #3f3f3f;
	}

	.catalog aside p {
		padding:0 17px 0 0;
	}

	.catalog aside .features dd {
		margin:5px 0 10px 25px;
		width: 175px;
	}
		.catalog aside .features dd p {
			margin:0;
		}

	.catalog aside ul.supported-data {
		padding:0;
		margin-top:0;
	}

	.catalog aside ul.supported-data li {
		list-style-type: none;
		padding: 0;
		font-family: 'Lato', arial, serif;
		font-size: 13px;
		font-weight: bold;
		margin: 3px 0 0 0;
		color: #000;
		-ms-user-select: none;
		-webkit-user-select: none;
		-khtml-user-select: none;
		-moz-user-select: none;
		-o-user-select: none;
		user-select: none;
	}

	.catalog aside h1, .catalog aside h2, .catalog aside h3 {
		font-size: 17px;
		font-family: 'Lato', arial, serif;
		color: #000;
		margin:0;
		padding:10px 0 0 0;
	}

	.catalog aside h2 {
		margin:0;
		padding:10px 0 10px 0;
		font-size: 15px;
	}

	.catalog aside .program-department {
		width:215px;
	}

.catalog section.page .top {
	background: #eeeeee;
	color: #a6a6a6;
	padding:0;
	height: 37px;
}
	.catalog section.page .top .sortsearch {
		font-size: 11px;
		float:right;
		height:100%;
	}
		.catalog section.page .top .sortsearch .search {
			display:inline-block;
			border: solid #fff;
			border-width: 0 0 0 1px;
			height:100%;
		}
			.catalog section.page .top .sortsearch .search input[type="text"] {
				width: 124px;
				margin:7px 10px 0 10px;
				border: solid 1px #b0b0b0;
				-webkit-border-radius: 12px;
				-moz-border-radius: 12px;
				border-radius: 12px;
				height: 19px;
				background: #fff url('../img/magnifyingglass.png') 5px 50% no-repeat;
				padding-left:23px;
				padding-right: 10px;
				outline: none;
			}

		.catalog section.page .top .sortsearch ul {
			display:inline-block;
			padding:0;
			margin:0 8px 0  5px;
		}
			.catalog section.page .top .sortsearch ul li {
				list-style-type:none;
				display:inline;
				margin:0 5px 0 0;
				font-size: 12px;
			}

	.catalog section.page .top h1 {
		margin:7px 0 0 15px;
		font-size: 18px;
		font-family: 'Lato', arial, serif;
		font-weight:550;
		text-shadow: 0 1px #fbfbfb;
		float:left;
	}

	.catalog section.page p {
		margin: 10px 15px 0 15px;
	}

.catalog section.widget {
	width: 356px;
	height: 110px;
	overflow: hidden;
	float:left;
	display: inline-block;
	margin:0 0 10px 0;
	overflow:visible;

	-webkit-border-radius:0 5px 5px 0;
	-moz-border-radius:0 5px 5px 0;
	border-radius:0 5px 5px 0;
	.widgetMin {
		opacity: 1;
	  -webkit-transition: opacity .3s ease-in-out;
	  -moz-transition: opacity .3s ease-in-out;
	  -ms-transition: opacity .3s ease-in-out;
	  -o-transition: opacity .3s ease-in-out;
	  transition: opacity .3s ease-in-out;
		&.hidden	{
			opacity:0.3;
			display:block;
		}
	}
}


	.catalog div.widgets {
		overflow: hidden;
		padding-top:10px;
	}
	.catalog section.widget h1 a {
		color: #000000;
	}

	.catalog section.widget img {
		width: 92px;
		height: 92px;
		margin:10px;
		float:left;
	}

	.catalog section.widget .header {
		float:left;
		max-width: 240px;
	}
		.catalog section.widget .header h1  {
			display:block;
		}

		.catalog section.widget .header h1  {
			font-size:10px;
			margin:0;
		}

		.catalog section.widget .header h1 {
			font-size: 18px;
			font-family: 'Lato-Black', arial, serif;
			margin-top:9px;
		}
		.highlighted {
			background: #FFF389;
			color: #000000;
		}

	.catalog section.widget ul {
		float:left;
		margin:0;
		padding:0;
		width:216px;
	}

	.catalog section.widget ul li {
		margin:0;
		padding:0;
		list-style-type:none;
	}

	dl.inline_def {
		width:235px;
		margin:0;
		line-height: 20px;
	}

.catalog .infocard {
	position:absolute;
	z-index:10;
	width: 356px;
	opacity:0;

	margin-top: 5px;
	padding-bottom:10px;

	background:url('../img/infocard_topbar_bg.png') repeat-x top;
	background-color:#FFFFFF;

	-moz-box-shadow: 1px 2px 4px #888;
	-webkit-box-shadow: 1px 2px 4px #888;
	box-shadow: 1px 2px 4px #888;

	-webkit-border-radius:5px;
	-moz-border-radius:5px;
	border-radius:5px;

	display:block;
	overflow:visible;

	color:#000000;
	&:hover{
		-webkit-animation: animateShow .3s;
		-moz-animation: animateShow .3s;
		animation: animateShow .3s;
		opacity:1;
		z-index:20;
	}
	h1{
		font-size:18px;
		font-family: 'Lato-Black', arial, serif;
		margin-top:5px;
		margin-bottom:5px;
		color:#FFFFFF;
		text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
		&:hover{
			text-decoration: underline;
		}
	}
	.header{
		margin-top: -4px;
	}
}


.catalog .infocard dl {
	overflow-y:auto;
	overflow-x:visible;
	display:block;
	float:left;
	margin-top:5px;
	margin-bottom:5px;
}

@-webkit-keyframes animateShow {
	0%   {opacity: 0}
	100% {opacity: 1}
}

@-moz-keyframes animateShow {
	0%   {opacity: 0}
	100% {opacity: 1}
}

@keyframes animateShow {
	0%   {opacity: 0}
	100% {opacity: 1}
}

